@@ -1,12 +1,10 @@
 package dev.huskuraft.effortless.building.operation.block;
 
-import java.awt.*;
 import java.util.Collections;
 import java.util.List;
 
 import dev.huskuraft.effortless.api.core.ItemStack;
-import dev.huskuraft.effortless.building.operation.ItemStackUtils;
-import dev.huskuraft.effortless.building.operation.ItemType;
+import dev.huskuraft.effortless.building.operation.ItemSummaryType;
 import dev.huskuraft.effortless.building.operation.TransformableOperation;
 import dev.huskuraft.effortless.building.operation.empty.EmptyOperation;
 
@@ -38,27 +36,29 @@ public class BlockBreakOperationResult extends BlockOperationResult {
     }
 
     @Override
-    public List<ItemStack> getProducts(ItemType type) {
+    public List<ItemStack> getProducts(ItemSummaryType type) {
         return switch (type) {
-            case PLAYER_USED -> {
-                yield Collections.emptyList();
-            }
-            case WORLD_DROPPED -> {
-                if (result.success()) {
-                    var color = Color.RED;
-                    if (color != null) {
-                        yield outputs().stream().map(stack -> ItemStackUtils.putColorTag(stack, color.getRGB())).toList();
-                    }
-                }
-                yield Collections.emptyList();
-            }
-        };
-    }
-
-    public Color getColor() {
-        return switch (result) {
-            case SUCCESS, CONSUME -> BLOCK_BREAK_OP_COLOR;
-            default -> null;
+            case BLOCKS_DESTROYED -> switch (result) {
+                case SUCCESS, CONSUME -> outputs();
+                default -> List.of();
+            };
+            case BLOCKS_BREAK_INSUFFICIENT -> switch (result) {
+                case FAIL_ITEM_INSUFFICIENT -> outputs;
+                default -> Collections.emptyList();
+            };
+            case BLOCKS_NOT_BREAKABLE -> switch (result) {
+                case FAIL_PLAYER_CANNOT_BREAK -> outputs();
+                default -> List.of();
+            };
+            case BLOCKS_BREAK_NOT_WHITELISTED -> switch (result) {
+                case FAIL_WHITELISTED -> outputs();
+                default -> List.of();
+            };
+            case BLOCKS_BREAK_BLACKLISTED -> switch (result) {
+                case FAIL_BLACKLISTED -> outputs();
+                default -> List.of();
+            };
+            default -> List.of();
         };
     }
 
